--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vite App</title>
+</head>
+
+<body>
+  <div style="display: flex;
+  justify-content: center; /* Căn giữa theo chiều ngang */
+  align-items: center; /* Căn giữa theo chiều dọc */">
+    <img id="IMGLogoHead" class="img-fluid img-logo" src="Image/Logo_LHU_Vi.png" style="border-width:0px;">
+  </div>
+  <div id="app"></div>
+  <script type="module" src="./src/main.ts"></script>
+</body>
+
 </html>
