--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>Thư viện Lạc Hồng</title>
 </head>
 <style>
   body {
     margin: 0;
-    margin-bottom: 80px;
     font-family: Arial, sans-serif;
   }
 
@@ -60,28 +59,10 @@
   }
   /* Media Queries */
   @media (max-width: 768px) {
-    footer {
-      justify-content: center;
-      /* Trung tâm hóa nội dung trên màn hình nhỏ */
-      text-align: center;
-      /* Căn giữa nội dung văn bản */
-    }
 
     #IMGLogoHead {
       max-width: 100%;
       height: auto;
-    }
-
-    .footer-bottom {
-      width: 100%;
-      /* Đảm bảo các phần tử chiếm toàn bộ chiều rộng trên màn hình nhỏ */
-    }
-  }
-
-  @media (max-width: 480px) {
-    body {
-      margin-bottom: 100px;
-      /* Tăng khoảng trống dưới trên thiết bị rất nhỏ */
     }
   }
 </style>
